-issue#5084: After Update 1.2.20 to 1.2.22 CMDPHP ERROR: A DB Cell Failed
-issue#5088: CLI script host_update_template.php falsely changes reindex method to uptime
-issue#5096: PHP8.x SNMP Agent Complains of missing $cache variable in snmpagent_mibcachechild.php
-issue#5097: The RRDtool Utilities should not appear on Remote Data Collectors
-issue#5101: Remote Data Collector Recovery Fails
-feature#1100: Structured path not created when using remote poller and Update On-Demand
-feature#1392: AJAX handled errors do not notify Admins that page errors exist
-feature#2239: Allow Import and Export to be more controlled
-feature#2485: Importing Template requires you to upload the same file after previewing
-feature#2548: Logs display Order vs head or tail
-feature#2567: For large systems, the sort buffer should be optimized for large tables
-feature#2747: Provide better sorting in Console >Management > Graphs
-feature#2871: Report when RRA's heartbeat is below the data source profile's interval
-feature#3131: Button to reindex bad indexes
-feature#3578: Scheduled Automatic Re-indexing of Devices
-feature#4025: When importing a Template or Package, allow the user to use the system default Height, Width, and Image format instead of the one embedded in the Template
-feature#4239: On "Graph Utility View" add the name of and a link to the graph template which the graph is based on
-feature#4417: Remote Pollers - Support execution of custom functions at poller bottom
-feature#4638: Detect the graph with stale rrd or missing rrd
-feature#4754: The script ss_fping.php should timeout based upon the actual device if its searchable
-feature#4762: Allow Package Import to be selective
-feature#4967: Make adding Associated Graph Templates and Data Queries easier to use
-feature#4786: Windows install does not support SVG rendering
-feature#4820: When importing, make it possible to only import certain components