@@ -106,6 +106,7 @@ Cacti CHANGELOG
 -issue#5096: PHP8.x SNMP Agent Complains of missing $cache variable in snmpagent_mibcachechild.php
 -issue#5097: The RRDtool Utilities should not appear on Remote Data Collectors
 -issue#5101: Remote Data Collector Recovery Fails
+-issue#5103: When Remote Data Collector changes status a full page refresh or logout should occur
 -feature#1100: Structured path not created when using remote poller and Update On-Demand
 -feature#1392: AJAX handled errors do not notify Admins that page errors exist
 -feature#2239: Allow Import and Export to be more controlled
